# A2A-Travel-Planner-Agent

./: .dockerignore  .env.example  .gitignore  Readme.md  docker-compose.yml  main.py  pyproject.toml  sdk_audit.py  test_all_agents.py
agents/base/: executor.py
agents/budget_agent/: estimate.py
agents/domestic_flight_agent/: search.py
agents/hotel_agent/: search.py
agents/intl_flight_agent/: search.py
agents/weather_agent/: forecast.py
config/: agents.yaml  events.yaml
database/: connection.py  models.py
frontend/: index.html
gateway/: app.py  router.py  stream.py  task_manager.py
orchestrator/: client.py  planner.py  registry.py
prompts/planner/: routing.yaml  system.yaml
shared/: config.py  logging.py
shared/schemas/: artifact.py  exceptions.py  task.py
state/: base.py  memory_store.py  postgres_store.py  redis_store.py  transitions.py
tests/agents/base/: test_executor.py
tests/agents/budget_agent/: test_estimate.py
tests/agents/domestic_flight_agent/: test_search.py
tests/agents/hotel_agent/: test_search.py
tests/agents/intl_flight_agent/: test_search.py
tests/agents/weather_agent/: test_forecast.py
tests/database/: test_connection.py  test_models.py
tests/gateway/: test_app.py  test_router.py  test_stream.py  test_task_manager.py
tests/orchestrator/: test_client.py  test_planner.py  test_registry.py
tests/shared/: test_artifact.py  test_config.py  test_exceptions.py  test_logging.py  test_task.py
tests/state/: test_base.py  test_memory_store.py  test_postgres_store.py  test_redis_store.py  test_transitions.py
